# polygon-mesh-processing

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.py  vcpkg.json  xmake.lua
apps/: CMakeLists.txt
apps/decimation/: main.cc
apps/geom-prop-vis/: main.cc
apps/iterative-cluster/: IterativeCluster.cc  IterativeCluster.h  main.cc
apps/k-means/: kmeans.cc  kmeans.h  main.cc
apps/lscm/: main.cc
apps/mesh-segmentation/: IterativeCluster.cc  IterativeCluster.h  README.md  bounds.h  chart-packer.cc  chart-packer.h  common.h  interactive-gui.cc  interactive-gui.h  interfaces.cc  interfaces.h  iterative-cluster.cc  iterative-cluster.h  main.cc  xatlas-utils.cc  xatlas-utils.h  xatlas.cpp  xatlas.h
apps/mesh-segmentation/data/: config.json
apps/multi-dimension-scaling/: main.cc
apps/openmesh/: main.cc
apps/param-tutte/: main.cc
apps/qslim/: main.cc  openmesh_decimater.cc
apps/remesh/: CMakeLists.txt  main.cc
apps/uv-clip/: line.h  main.cc  uv-clipper.cc  uv-clipper.h
apps/vertex-baking/: error_analyzer.cc  error_analyzer.h  least-squares-vertex-baker.cc  least-squares-vertex-baker.h  main.cc  point-sampling-vertex-baker.cc  point-sampling-vertex-baker.h  triangle-sampler.cc  triangle-sampler.h  vertex-baker.cc  vertex-baker.h
apps/vertex-baking/tests/constant_texture/: argument.json  texture_generator.py
apps/vertex-baking/tool/: mesh-generator.py
data/: camel-head-simp.off
data/scene/: SM_DT01_Floor17_LOD0_submesh_0.fbx  SM_DT01_Floor17_LOD0_submesh_1.fbx  TerrainChunk.ply
src/: CMakeLists.txt  ColorSetGenerator.cc  Mds.cc  Mds.h  MeshIO.cc  MeshIO.h  MeshUtils.cc  MeshUtils.h  color_set_generator.cc  mesh_utils.cc
src/filesys/: filesys.cc  filesys.h
src/geometry/: barycentric-coord.cc  barycentric-coord.h  bounds.h  intersection.cc  intersection.h  line.cc  line.h
src/pmp/clip/: uv-clipper.cc  uv-clipper.h
src/property/: face-normal.cc  face-normal.h  param_tutte.h
src/remesh/: remesher.cpp  remesher.h
src/repair/: repair.cc  repair.h
src/sampling/: hammersley-sampler.h  sampler.h  uniform-sampler.cc  uniform-sampler.h
src/segmentation/: kmeans.cc
src/simplification/: ModVertexColorQuadricT.cc  ModVertexColorQuadricT.h  simplification.cc  simplification.h
src/texture/: texture.cc  texture.h
src/utils/: mesh_io.cc  mesh_io.h  mesh_utils.cc  mesh_utils.h  vertex_merger.cc  vertex_merger.h
src/visualization/: color_set_generator.h  mesh_vis.cc  mesh_vis.h
tests/: CMakeLists.txt  bounds-test.cc  polygon-clip-test.cc  uv-clip-test.cc
